--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
         <activity android:name=".Activity.DanhSachPlayListActivity">
         </activity>
+        <activity android:name=".Activity.AllChuDeActivity">
+        </activity>
     </application>
 
 </manifest>
