- Screen TheLoaiTheoChuDe and API

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         </activity>
         <activity android:name=".Activity.AllChuDeActivity">
         </activity>
+        <activity android:name=".Activity.AllTheLoaiTheoChuDeActivity">
+        </activity>
     </application>
 
 </manifest>
