--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name=".Activity.AllTheLoaiTheoChuDeActivity">
         </activity>
+        <activity android:name=".Activity.AllAlbumActivity">
+        </activity>
     </application>
 
 </manifest>
